restmini 1.x, 2016-11-26
------------------------
- Error logs must include request duration.
- Client class renamed to Client; from RestMini. Conf var domain renamed to
  lib_simplecomplex_restmini_client; from lib_simplecomplex_restmini.
- Fixed ternary concatenation error/risk in configGet().

restmini 1.x, 2016-11-12
------------------------
- Request timeout/execution timeout algo should take elapsed execution time into
  consideration.

restmini 1.x, 2016-10-23
------------------------
- New option (str) log_type.
- Defining Accept and Accept-Charset via options[headers][.] is now deprecated.
  Use options[accept] and options[accept_charset] instead.
- If options[get_headers] the number of 'stops' visible in response headers get
  get recorded.
- Multiple same-named response headers are no longer recorded in singular
  buckets, but instead recorded in other cumulutive_{name} buckets;
  concatenated, right-to-left (default), pipe separated.
- Request content_type option for JSON must now start with 'application/json';
  not only contain it.