@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2016 Jacob Friis Mathiasen <jacob.friis@simplecomplex.net>
+Copyright (c) 2016-2017 Jacob Friis Mathiasen <jacob.friis@simplecomplex.net>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
